b=414092, crash at _moz_pixman_image_fill_rectangles on x86-64, r=karlt