gfx/cairo/libpixman/src/pixman-region.c
@@ -55,7 +55,6 @@ SOFTWARE.
 #include <stdio.h>
 
 #include "pixman-private.h"
-#include "pixman.h"
 
 typedef struct pixman_region16_point {
     int x, y;
